--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>CANSOFCOM Innovation</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default
+title: CANSOFCOM Innovation
+subTitle: We WILL find a way
+---
